--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,2 +1,9 @@
-/* some style */
+body {
+  background-color: #02a4ff;
+  color: #ffffff;
+}
 
+h1 {
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
